[project]
name = "nonebot-plugin-batitle"
version = "0.1.7"
description = "BlueArchive Title Generator"
authors = [
    {name = "MerCuJerry", email = "mercujerry@gmail.com"},
]
dependencies = [
    "nonebot2 >= 2.5.0",
    "nonebot-plugin-send-anything-anywhere >= 0.7.1",
    "pillow >= 11.0.0 "
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.urls]
homepage = "https://github.com/MerCuJerry/nonebot-plugin-batitle"

[tool.pdm.build]
includes = ["nonebot_plugin_batitle"]
