[project]
name = "nonebot-plugin-batitle"
version = "0.2.1"
description = "BlueArchive Title Generator"
authors = [
    {name = "MerCuJerry", email = "mercujerry@gmail.com"},
]
dependencies = [
    "nonebot2 >= 2.5.0",
    "nonebot_plugin_alconna >= 0.54.1",
    "pillow >= 11.0.0 ",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {file = "LICENSE"}

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
source-include = ["nonebot_plugin_batitle"]

[project.urls]
homepage = "https://github.com/MerCuJerry/nonebot-plugin-batitle"
